--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
 		stage("test: baseline (jdk17)") {
 			agent {
 				docker {
-					image 'adoptopenjdk/openjdk17:latest'
+					image 'openjdk'
 					args '-v $HOME/.m2:/tmp/jenkins-home/.m2'
 				}
 			}
